Simplify env.sample for GCP-only deployment
- Remove all required environment variables
- Everything is auto-detected in GCP
- Add comments explaining auto-detection
- Keep only optional overrides for model and location

--- a/env.sample
+++ b/env.sample
@@ -1,20 +1,14 @@
-# Copy this file to .env and adjust values as needed
-
-# Gemini API Key (optional - only needed if NOT running in GCP)
-# If running in GCP, Vertex AI will be used automatically via Application Default Credentials
-GEMINI_API_KEY=
-
-# Model name (default: gemini-2.0-flash)
-GEMINI_MODEL=gemini-2.0-flash
-
-# Vertex AI settings (only needed if forcing Vertex AI mode)
-# If GOOGLE_CLOUD_PROJECT is set, Vertex AI will be used automatically
-GOOGLE_CLOUD_PROJECT=
-VERTEX_LOCATION=us-central1
-USE_VERTEX=0
-
-# GCP Project ID (for deployment scripts)
-# Set this to avoid passing project-id as argument
-# export GOOGLE_CLOUD_PROJECT=your-project-id
-
-
+# Environment variables for Gemini Agent
+# This file is used as a template for .env
+#
+# When running in GCP, all settings are auto-detected:
+# - Project ID: Auto-detected from metadata server
+# - Vertex AI: Automatically used via Application Default Credentials
+# - Location: Defaults to us-central1
+# - Model: Defaults to gemini-2.0-flash
+#
+# No configuration needed for GCP deployments!
+#
+# Optional: Override defaults if needed
+# GEMINI_MODEL=gemini-1.5-pro
+# VERTEX_LOCATION=us-east1
