--- a/env.sample
+++ b/env.sample
@@ -10,5 +10,5 @@
 # No configuration needed for GCP deployments!
 #
 # Optional: Override defaults if needed
-# GEMINI_MODEL=gemini-1.5-pro
+# GEMINI_MODEL=gemini-2.0-flash
 # VERTEX_LOCATION=us-east1
